# api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: otel-collector-config.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
pragma/: config.py  main.py  telemetry.py
pragma/client/: client.py  crawler.py  token.py  websocket.py
pragma/models/: schemas.py  utils.py
pragma/routers/: api.py
pragma/routers/endpoints/: assertions.py  candlestick.py  offchain.py  onchain.py  streaming.py  tokens.py  websocket.py
pragma/utils/: logging.py  ws.py
scripts/: tests.sh
testing/: example.py
testing/javascript/: package-lock.json  package.json  ws_client.js
testing/python/: example.py
tests/: conftest.py
tests/routers/endpoints/: test_onchain.py
